--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,16 +1,20 @@
-﻿<Window x:Class="_2019HSQXSJK.MainWindow"
+﻿<telerik:RadWindow x:Class="_2019HSQXSJK.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
+        Header="呼和浩特市气象资料数据库"
+        WindowStartupLocation="CenterScreen"
+        CanClose="False"
+        FontSize="20"
+        FontFamily="楷体"
+        Height="550" Width="1000" >
     <Grid>
-        <TextBox x:Name="t1" HorizontalAlignment="Left" Height="354" Margin="46,31,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="653" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" TextChanged="T1_TextChanged_1" />
-        <Button Content="分钟降水量" HorizontalAlignment="Left" Margin="707,53,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <TextBox x:Name="t1" HorizontalAlignment="Left" Height="450" Margin="46,31,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="700" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" TextChanged="T1_TextChanged_1" />
+        <telerik:RadButton Content="分钟降水量" HorizontalAlignment="Left" Margin="800,53,0,0" VerticalAlignment="Top" Width="120" Height="30" Click="Button_Click" FontSize="15"/>
 
     </Grid>
-</Window>
+</telerik:RadWindow>
         
 
